sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/Purchase_Order_Item__c.object-meta.xml
<CustomObject>
    <label>Purchase Order Item</label>
    <nameField>
        <label>Purchase Order Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Order Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>