sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved by Finance</fullName>
            </value>
            <value>
                <fullName>Approved by Legal</fullName>
            </value>
            <value>
                <fullName>Rejected by Finance</fullName>
            </value>
            <value>
                <fullName>Rejected by Legal</fullName>
            </value>
            <value>
                <fullName>Approved by Team Lead</fullName>
            </value>
            <value>
                <fullName>Rejected by Team Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>