sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Vendor__c</field>
            <operation>equals</operation>
            <valueField>Contract__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Purchase Order Items</relationshipLabel>
    <relationshipName>Purchase_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>