sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/fields/Contract_Summary__c.field-meta.xml
<CustomField>
    <fullName>Contract_Summary__c</fullName>
    <formula>Contract_Number__r.Contract_Summary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Summary</label>
    <type>Text</type>
</CustomField>