sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Currency</label>
    <referenceTo>Currency_Config__c</referenceTo>
    <relationshipLabel>Purchase Order Items</relationshipLabel>
    <relationshipName>Purchase_Order_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>