sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/fields/Default_Receive_Location__c.field-meta.xml
<CustomField>
    <fullName>Default_Receive_Location__c</fullName>
    <formula>Inventory_Item__r.Default_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Receive Location</label>
    <type>Text</type>
</CustomField>