sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/fields/Default_Receive_Lot__c.field-meta.xml
<CustomField>
    <fullName>Default_Receive_Lot__c</fullName>
    <formula>Inventory_Item__r.Default_Lot__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Receive Lot</label>
    <type>Text</type>
</CustomField>