sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/fields/Department_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Department_Team_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department Team Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Purchase_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>