sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/fields/Finance_Approval__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Finance Approval</description>
    <inlineHelpText>Finance Approval</inlineHelpText>
    <label>Finance Approval</label>
    <type>Checkbox</type>
</CustomField>