sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/fields/Gross_Value__c.field-meta.xml
<CustomField>
    <fullName>Gross_Value__c</fullName>
    <formula>Unit_Net_Price__c  +  Net_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>