sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/fields/Have_you_reviewed_all_the_Price_Changes__c.field-meta.xml
<CustomField>
    <fullName>Have_you_reviewed_all_the_Price_Changes__c</fullName>
    <label>Have you reviewed all the Price Changes?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>