sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/fields/Inventory_UOM__c.field-meta.xml
<CustomField>
    <fullName>Inventory_UOM__c</fullName>
    <formula>Inventory_Item__r.Inventory_UoM__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory UOM</label>
    <type>Text</type>
</CustomField>