sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/fields/Item_Cost__c.field-meta.xml
<CustomField>
    <fullName>Item_Cost__c</fullName>
    <label>Unit Item Cost</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>