sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <description>The description of the Item</description>
    <inlineHelpText>The description of the Item. This is the name that will be displayed on Purchase Order Documents, etc</inlineHelpText>
    <label>Item Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>