sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/fields/Legal_Approval__c.field-meta.xml
<CustomField>
    <fullName>Legal_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Legal Approval</description>
    <inlineHelpText>Legal Approval</inlineHelpText>
    <label>Legal Approval</label>
    <type>Checkbox</type>
</CustomField>