sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/fields/Net_VAT__c.field-meta.xml
<CustomField>
    <fullName>Net_VAT__c</fullName>
    <formula>IF(Vatable__c = true,
IF(  VAT_Inclusive__c  = true,
 Item_Cost__c  - ( Item_Cost__c  /((VALUE(TEXT(  VAT_Percentage__c  ))+100)/100)) ,
 Item_Cost__c * (VALUE(TEXT(VAT_Percentage__c  ))/100)) ,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>