sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/fields/Primary_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Vendor</label>
    <type>Checkbox</type>
</CustomField>