sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/fields/Purchase_UoM__c.field-meta.xml
<CustomField>
    <fullName>Purchase_UoM__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Purchase UoM</label>
    <referenceTo>Inventory_UoM__c</referenceTo>
    <relationshipLabel>Purchase Order Items (Purchase UoM)</relationshipLabel>
    <relationshipName>Purchase_Order_Items1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>