sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/fields/Requires_Contract__c.field-meta.xml
<CustomField>
    <fullName>Requires_Contract__c</fullName>
    <formula>Inventory_Item__r.Item_Group__r.Requires_Contract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requires Contract</label>
    <type>Checkbox</type>
</CustomField>