sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/fields/Unit_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Net_Price__c</fullName>
    <formula>IF(Vatable__c = true,
   IF(VAT_Inclusive__c = true,
         Item_Cost__c  /( (VALUE(TEXT(VAT_Percentage__c))+100)/100 ) ,
         Item_Cost__c 
      ),
     Item_Cost__c   
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Net Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>