sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/fields/UOM_Conversion_Factor__c.field-meta.xml
<CustomField>
    <fullName>UOM_Conversion_Factor__c</fullName>
    <description>The factor by which the UOM is converted from purchase to inventory</description>
    <inlineHelpText>Purchase Quantity * UOM Conversion Factor = Inventory Quantity to receive</inlineHelpText>
    <label>UOM Conversion Factor</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>