sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/fields/Vendor_Code__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Code__c</fullName>
    <label>Vendor Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>