sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/fields/Vendor_Description__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Description__c</fullName>
    <label>Vendor Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>