sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/recordTypes/AfterLegalApproval.recordType-meta.xml
<RecordType>
    <fullName>AfterLegalApproval</fullName>
    <active>true</active>
    <description>Cost information not editable</description>
    <label>AfterLegalApproval</label>
</RecordType>