sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/recordTypes/BeforeLegalApproval.recordType-meta.xml
<RecordType>
    <fullName>BeforeLegalApproval</fullName>
    <active>true</active>
    <description>Has capability to add contract</description>
    <label>BeforeLegalApproval</label>
</RecordType>