sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/validationRules/RestrictEditingVendorUOMandInventoryItem.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictEditingVendorUOMandInventoryItem</fullName>
    <active>false</active>
    <description>Restrict Editing Vendor, UOM and Inventory Item</description>
    <errorConditionFormula>AND( OR(ISCHANGED( Inventory_UOM__c ),ISCHANGED( Vendor__c  ),ISCHANGED( Inventory_Item__c  )) )</errorConditionFormula>
    <errorDisplayField>Approval_Status__c</errorDisplayField>
    <errorMessage>You cannot change  UOM, Vendor and Inventory Item</errorMessage>
</ValidationRule>