sfSandBoxCode/force-app/main/default/objects/Purchase_Order_Item__c/validationRules/SecondaryVendorComments.validationRule-meta.xml
<ValidationRule>
    <fullName>SecondaryVendorComments</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK(Comments__c  ), AND( NOT(ISPICKVAL(Vendor_Type__c	, &#39;Primary&#39;)), Primary_Vendor__c  = false, NOT(ISBLANK(TEXT(Vendor_Type__c) ))  ) )</errorConditionFormula>
    <errorDisplayField>Comments__c</errorDisplayField>
    <errorMessage>Give a reason why you are selecting a Secondary Vendor</errorMessage>
</ValidationRule>